@@ -1,6 +1,7 @@
 quelea (2017.2) stable; urgency=normal
  
   * Fix bug with PDF export
-  * Fix remote mobile view HTML to be more accessible  
+  * Fix remote mobile view HTML to be more accessible
+  * Ignore verses with invalid numbers rather than throwing an exception (it seems footnotes are sometimes specified with an invalid number)  
 
  -- Michael Berry <michael@quelea.org>  Wednesday, 24 Oct 2017 00:00:00 +0000
